--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -122,11 +122,12 @@ jobs:
           --nofollow-import-to=nose \
           \
           --include-package=googleapiclient.discovery --include-package=google.oauth2 \
+          --include-package=pandas \
+          --include-package=pygments \
           --include-package=aipyapp \
           --include-package-data=aipyapp \
           --enable-plugin=matplotlib \
           --enable-plugin=numpy \
-          --enable-plugin=pandas  \
           \
           --company-name='knownsec.inc' \
           --product-name='knownsec' \
